# py-shiny-templates

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: docker-image-azure-webapp-claims.yml  docker-image-simple-wheather-app.yml  docker-image-starlette-routes-modular.yml
.playgound/: app.py
azure-webapp-claims/: Dockerfile  _template.json  app.py  docker-compose.yml  requirements.txt
basic-app/: README.md  _template.json  app.py  docker-compose.lb.yml  docker-compose.yml  shiny-basic-app.service
fastapi-routes/: _template.json  requirements.txt
fastapi-routes-modular/: _template.json  app.py  app_shiny.py
simple-wheather-app/: Dockerfile  README.md  _template.json  docker-compose.yml  pyproject.toml  requirements.pyodide.txt  requirements.txt
starlette-auth/: app_oauth.py  app_shiny2.py
starlette-oauth/: README.md  _template.json  app.py  app_shiny.py  requirements.txt
starlette-routes-modular/: Dockerfile  _template.json  app.py  app_fastapi.py  app_shiny2.py  docker-compose.yml
