[project]
name = "py-shiny-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.5.0",
    "fastapi>=0.115.8",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "shiny>=1.2.1",
    "shinylive>=0.7.3",
    "starlette[full]>=0.45.3",
]
